# VisionPipeline-detection

./: README.md  pyproject.toml
