[project]
name = "detect-lib"
version = "0.1.1"
description = "A modular video object detection toolkit with a clean det-v1 JSON schema, pluggable backends, and optional model export."
readme = "README.md"
authors = [
    { name = "Surya Chand Rayala", email = "suryachand2k1@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.67.3",
    "ultralytics>=8.4.14",
]

[project.optional-dependencies]
export = [
    "onnx>=1.20.1",
    "onnxruntime>=1.24.1",
]
tf = [
    "tensorflow>=2.20.0",
]
openvino = [
    "openvino>=2025.4.1",
]
coreml = [
    "coremltools>=9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
